--- a/src/app/features/lms/ind/components/policy/components/underwriting/underwriting.component.css
+++ b/src/app/features/lms/ind/components/policy/components/underwriting/underwriting.component.css
@@ -44,3 +44,14 @@
   border: solid 2px var(--primary-color);
   border-radius: 0px;
 }
+
+
+
+
+@media (max-width: 768px) {
+  .modal-content-undw {
+    width: 80% !important; /* Adjust the width as needed */
+    transform: translate(2rem, 3rem);
+    height: 139rem !important;
+  }
+}
