--- a/src/app/features/crm/components/currencies/currencies.component.html
+++ b/src/app/features/crm/components/currencies/currencies.component.html
@@ -158,10 +158,10 @@
                 >
                   <td class="body">{{ rate.rateCurrency }}</td>
                   <td class="body">{{ rate.rate }}</td>
-                  <td class="body">{{ rate.withEffectiveFrom }}</td>
-                  <td class="body">{{ rate.withEffectiveTo }}</td>
+                  <td class="body">{{ rate.withEffectFromDate }}</td>
+                  <td class="body">{{ rate.withEffectToDate }}</td>
                   <td class="body">{{ rate.preparedBy }}</td>
-                  <td class="body">{{ rate.preparedDate }}</td>
+                  <td class="body">{{ rate.date }}</td>
                   <td class="body">{{ rate.authorizedBy }}</td>
                   <td class="body">{{ rate.authorizedDate }}</td>
                   <td class="body">{{ rate.authorized }}</td>
