--- a/src/app/features/crm/components/region/region.component.html
+++ b/src/app/features/crm/components/region/region.component.html
@@ -17,7 +17,7 @@
             >
             <p-dropdown
               [options]="organizationsData"
-              [(ngModel)]="selectedOrganization"
+              [(ngModel)]="selectedOrganizationId"
               (onChange)="onOrganizationChange()"
               optionLabel="name"
               optionValue="id"
