--- a/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.css
@@ -1,4 +1,4 @@
-.sub-title{    
+    .sub-title{    
     color: rgba(0, 0, 0, 0.25);
     font-size: 15px;
     font-style: normal;
@@ -60,4 +60,38 @@
     .nav-item > .active{
         color:var(--primary-color);;
     
+    }
+    /* ::ng-deep
+    .p-datatable .p-datatable-tbody{
+        border:0px
+    } */
+
+    #icon{
+        background-color: #E4E7EB;
+        border-radius: 100px;
+        border: none;
+    }
+    #icon i{
+        color: #00529B;
+    }
+    .fa-pencil{
+        color:#00529B
+    }
+    .fa-trash-can{
+        color:#00529B
+    }
+    #messageLabel{
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+    }
+    .titleButton{
+        border-radius: 4px;
+        background: #E4E7EB;
+        color: #00529B;
+        border:0px;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 18px; 
     }
