--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
@@ -45,8 +45,10 @@ line-height: normal;
   }
 
 ::ng-deep .p-dropdown{
-    height: 35px;
-    width: 330px;
+    height: 53%;
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    border-radius: 4px;
 }
 ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder{
 padding:3px;
@@ -64,4 +66,15 @@ padding:3px;
     width: 100%;
     height: 30px;
     border-radius: 4px;
+}
+#quote-input{
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    /* height: 50%; */
+    font-size: 14px;
+}
+
+.form-select {
+    height: 49%;
+
 }
