--- a/src/app/features/gis/components/quotation/components/quotations-client-details/quotations-client-details.component.css
+++ b/src/app/features/gis/components/quotation/components/quotations-client-details/quotations-client-details.component.css
@@ -57,5 +57,16 @@ cursor:pointer
 #icon i{
     color: #00529B;
 }
+#quote-input{
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    /* height: 50%; */
+    font-size: 14px;
+}
+
+.form-select {
+    height: 49%;
+
+}
 
 
