--- a/src/app/features/crm/components/region/region.component.html
+++ b/src/app/features/crm/components/region/region.component.html
@@ -240,7 +240,7 @@
 <div
   class="modal fade"
   #regionModal
-  id="region"
+  id="regionModal"
   tabindex="-1"
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
@@ -248,7 +248,7 @@
   <div class="modal-dialog align-items-center">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Define a Division</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Define a Region</h5>
         <button
           type="button"
           class="btn-close"
@@ -373,7 +373,7 @@
 <div
   class="modal fade"
   #bankModal
-  id="bank"
+  id="bankModal"
   tabindex="-1"
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
