--- a/src/app/features/crm/components/division/division.component.html
+++ b/src/app/features/crm/components/division/division.component.html
@@ -185,7 +185,7 @@
 <div
   class="modal fade"
   #divisionModal
-  id="division"
+  id="divisionModal"
   tabindex="-1"
   aria-labelledby="exampleModalLabel"
   aria-hidden="true"
